# keyboard-nes

./: CMakeLists.txt  LATENCY.md  README.md  tusb_config.h
hardware/kbd-nes-v1/: fp-lib-table  kbd-nes-v1.kicad_pcb  kbd-nes-v1.kicad_prl  kbd-nes-v1.kicad_pro  kbd-nes-v1.kicad_sch  nes-io.kicad_sch  nes_io.kicad_sch  prog_tagconn.kicad_sch  rp2040-block.kicad_sch  rp2040_core.kicad_sch  sym-lib-table  usb_keyboard_host.kicad_sch  usb_power_in.kicad_sch
hardware/kbd-nes-v1/BOM/: kbd-nes-v1-all-pos.csv  kbd-nes-v1.csv
hardware/kbd-nes-v1/footprints.pretty/: D8-L.kicad_mod  D8-M.kicad_mod  D8.kicad_mod
hardware/kbd-nes-v1/gerbers/: kbd-nes-v1-B_Cu.gbl  kbd-nes-v1-B_Mask.gbs  kbd-nes-v1-B_Silkscreen.gbo  kbd-nes-v1-Edge_Cuts.gm1  kbd-nes-v1-F_Cu.gtl  kbd-nes-v1-F_Mask.gts  kbd-nes-v1-F_Paste.gtp  kbd-nes-v1-F_Silkscreen.gto  kbd-nes-v1-GND.g1  kbd-nes-v1-NPTH.drl  kbd-nes-v1-PTH.drl  kbd-nes-v1-PWR.g2  kbd-nes-v1-job.gbrjob
hardware/kbd-nes-v2/: 2026-04-16_04-35-59.kicad_sym  fp-lib-table  kbd-nes-v2.kicad_pcb  kbd-nes-v2.kicad_prl  kbd-nes-v2.kicad_pro  kbd-nes-v2.kicad_sch  kbd-nes.bak  kbd-nes.kicad_sym  nes_io.kicad_sch  rp2040_core.kicad_sch  sym-lib-table  usb_keyboard_host.kicad_sch
hardware/kbd-nes-v2/BOM/: kbd-nes-v2-all-pos.csv  kbd-nes-v2.csv
hardware/kbd-nes-v2/gerbers/: kbd-nes-v2-B_Cu.gbl  kbd-nes-v2-B_Mask.gbs  kbd-nes-v2-B_Silkscreen.gbo  kbd-nes-v2-Edge_Cuts.gm1  kbd-nes-v2-F_Cu.gtl  kbd-nes-v2-F_Mask.gts  kbd-nes-v2-F_Paste.gtp  kbd-nes-v2-F_Silkscreen.gto  kbd-nes-v2-GND.g1  kbd-nes-v2-NPTH.drl  kbd-nes-v2-PTH.drl  kbd-nes-v2-PWR.g2  kbd-nes-v2-job.gbrjob
hardware/kbd-nes-v2/kbd-nes-pretty.pretty/: F1812.kicad_mod  SMA_L4.3-W2.6-LS5.2-RD.kicad_mod  SOD-323_L1.7-W1.3-LS2.5-BI.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BR.kicad_mod  SW-TH_SS12D07VG4.kicad_mod  logo-silkscreen.kicad_mod
hardware/kbd-nes-v2/lcsc/: C151169.kicad_sym  C19224.kicad_sym  C2939728.kicad_sym  C55266.kicad_sym  C87074.kicad_sym
hardware/kbd-nes-v2/lcsc/C151169.3dshapes/: F1812_L4.5-W3.2-H1.0.wrl
src/: debug_log.h  key_bindings.c  key_bindings.h  led.c  led.h  main.c  nes_pio.pio  usb_hid.c  usb_hid.h
(+7 files in other folders)
